<resources>
    <string name="app_name">Perfect Abs Workout</string>
    <string name="text_nstruction">Instruction</string>
    <string name="text_start">Explore</string>
    <string name="left_days">%1$d Days left</string>
    <string name="achievement_days">%1$d Days</string>
    <!--<string name="percent_text_format">%1$d %%</string>-->
    <string name="days_text">Day %1$d </string>
    <string name="reps_text">X %1$d </string>
    <string name="start_text">START</string>
    <string name="text_ready_to">Ready to go</string>
    <string name="rest_day_text">Rest Day</string>

    <string name="acheivements_text">Nice you have completed exercise Day </string>
    <string name="text_finish">FINISH</string>
    <string name="share_text">SHARE</string>
    <string name="congratulation_activity">Exercise completed</string>

    <string name="day_activity">Days list</string>
    <string name="graph_title">Daily weight graph</string>
    <string name="kg_label">kg</string>
    <string name="bmi_text">BMI</string>
    <string name="edit">Edit</string>
    <string name="current_weight_text">Current weight</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="recipe_detail_format">Day %1$d recipe\'s</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="weight">Weight</string>
    <string name="severely_under_weight">Severely Under weight</string>
    <string name="under_weight">Under weight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="workout_text">Workout</string>
    <string name="cancel_timer">Remind later</string>
    <string name="cancel_timer_detail">Would you like to start exercise later or cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="calculator_height_label">My Height</string>
    <string name="calculator_gender_label">I am</string>
    <string name="calculator_age_label">Years Old</string>
    <string name="calculator_weight_label">My Weight</string>
    <string name="calculator_weight_kg_label">kg</string>
    <string name="calculator_weight_pound_label">lb</string>
    <string name="calculate_text">CALCULATE</string>
    <string name="age_limit_text">Age should be in range 10-150</string>
    <string name="weight_limit_kg_text">Weight Should be in range 10-500 kg</string>
    <string name="weight_limit_lb_text">Weight Should be in range 10-1100 lb</string>
    <string name="text_snooze">Snooze</string>
    <string name="reminder_detail">It\'s time for %1$splan workouts</string>
    <string name="six_pack_time">Six Pack Time</string>
    <string name="complete_all_days">You are done</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_reset">Reset Progress</string>
    <string name="menu_setting">Settings</string>
    <string name="toggle_notification_title">Notifications</string>
    <string name="toggle_notification">Daily Notifications</string>
    <string name="menu_action_more_apps">More apps</string>
    <string name="menu_share">Share it</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="app_share_text_intent">Lose belly fat fast with Six pack and get Perfect abs in 21 days</string>
    <string name="text_diet_plan">Diet plan</string>
    <string name="text_belly_abs">Belly Abs plan</string>
    <string name="text_six_pack_abs">Six Pack Abs plan</string>
    <string name="text_perfect_abs">Perfect Abs plan</string>
    <string name="reset_diet_plan">Reset Diet plan</string>
    <string name="reset_belly_abs">Reset Belly Abs plan</string>
    <string name="reset_six_pack_abs">Reset Six Pack Abs plan</string>
    <string name="reset_perfect_abs">Reset Perfect Abs plan</string>
    <string name="reset_progress">Reset in progress...</string>
    <string name="reps">Reps</string>
    <string name="seconds">Seconds</string>
    <string name="next_exercise_text">your next exercise is </string>
    <string name="to_the_exercise_text">to the exercise </string>
    <string name="tts_option_title">TTS Option</string>
    <string name="tts_text_title">TTS Voice</string>
    <string name="seconds_format">%1$d Sec</string>
    <string name="reps_format">%1$d Reps</string>
    <string name="text_quit">Quit</string>
    <string name="time_text">Time</string>
    <string name="text_snooze_setting">Snooze Time (Minutes)</string>
    <string name="toggle_snooze_title">Snooze Notification</string>

    <string name="reset_progress_detail">Are you sure to reset progress?</string>
    <string name="reminder_title">▶ Resume your workout</string>
    <string name="last_30_days">Last 30 days exercises</string>
    <string name="ad">AD</string>
    <string name="admob_interstitial_ad_unit">ca-app-pub-6412217023250030+4256240444</string>
    <string name="admob_native_ad_unit">ca-app-pub-6412217023250030+2173411705</string>
    <string name="admob_banner_ad_unit">ca-app-pub-6412217023250030+4148429233</string>

    <string name="facebook_banner_ad_unit">737528443302821+737532023302463</string>
    <string name="facebook_interstitial_ad_unit">737528443302821+737528736636125</string>
    <string name="npa" translatable="false">npa</string>
    <string name="publisher_id" translatable="false">pub-6412217023250030</string>
    <string name="privacy_policy_url" translatable="false">https://s3-us-west-2.amazonaws.com/thetaapps/PrivacyPolicy.htm</string>
    <string name="is_consent_first_time_requested" translatable="false">Is Consent First Time Requested</string>
    <string name="app_exit">Would you like to exit?</string>

    <string name="workout_text_splash">WORKOUT</string>
    <string name="abs_text_splash">ABS</string>
    <string name="kg_text_hints">0.0 kg</string>
    <string name="lb_text_hints">0.0 lb</string>
    <string name="text_skip">SKIP</string>
    <string name="remove_ads">Premium upgrade</string>
    <string name="privacy_policy">Privacy</string>
    <string name="review_text">CHANGE</string>
    <string name="daily_tips_text">Today Tip\'s</string>
    <string name="report_text">Report</string>
    <string name="calories_pattern">100 Kcal</string>
    <string name="workout_pattern">10 Workouts</string>
    <string name="monday_text">M</string>
    <string name="tuesday_text">T</string>
    <string name="wednesday_text">W</string>
    <string name="thursday_text">T</string>
    <string name="friday_text">F</string>
    <string name="saturday_text">S</string>
    <string name="sunday_text">S</string>
</resources>
