<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_fitness"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting" />

    </group>
    <group android:id="@+id/grp_privacy"
        android:checkableBehavior="single">
        <item android:title="Premium">
            <menu>
                <item
                    android:id="@+id/in_app"
                    android:icon="@drawable/ic_remove_ads"
                    android:title="@string/remove_ads" />
            </menu>
        </item>


    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_rate_us" />
            <item
                android:id="@+id/nav_more_app"
                android:icon="@drawable/ic_apps"
                android:title="@string/menu_action_more_apps" />
        </menu>
    </item>

</menu>
