<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:text="@string/app_exit"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />


        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_msg"
            android:visibility="gone"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/admob_banner_ad_unit" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/menu_rate_us"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_2dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dialog_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/text_no" />

            <Button
                android:id="@+id/dialog_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/text_yes"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</layout>