<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250dp"
        android:layout_marginBottom="@dimen/_3dp"
        android:layout_marginLeft="@dimen/_3dp"
        android:layout_marginRight="@dimen/_3dp"
        app:cardCornerRadius="@dimen/_2dp"
        app:cardElevation="@dimen/_2dp">

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/share_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/share_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/finish_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="right|bottom"
                android:text="@string/text_finish"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <!--</LinearLayout>-->

            <TextView
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="@dimen/_40dp"
                android:id="@+id/acheivements_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:padding="@dimen/_10dp"
                android:text="@string/acheivements_text"
                android:textSize="15sp" />


            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_card_congratulations" />


        </FrameLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
</layout>