<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_setting_notification_on_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2dp"
        card_view:cardCornerRadius="@dimen/_2dp"
        card_view:cardElevation="@dimen/_2dp"
        card_view:contentPadding="@dimen/_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/daily_notify_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toggle_notification_title"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/setting_screent_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    card_view:srcCompat="@drawable/ic_alarm_notify" />

                <TextView
                    android:id="@+id/daily_notify_detail"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/toggle_notification"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_screent_text_size" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notify_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50dp"
                    android:textOff="OFF"
                    android:textOn="ON"
                    app:showText="true"
                    app:switchTextAppearance="@style/BrandedSwitch.text"
                    app:theme="@style/BrandedSwitch.control" />
            </LinearLayout>

            <Space android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_grey"
               />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    card_view:srcCompat="@drawable/ic_snooze" />

                <TextView
                    android:id="@+id/snooze_notify_detail"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/toggle_snooze_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_screent_text_size" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/snooze_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50dp"
                    android:textOff="OFF"
                    android:textOn="ON"
                    app:showText="true"
                    app:switchTextAppearance="@style/BrandedSwitch.text"
                    app:theme="@style/BrandedSwitch.control" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>